<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="9dp">
<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvTakeExtra"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAllCaps="true"
    android:text="@string/take_an_extra"
    android:textColor="@color/black"
    android:textStyle="normal"
    android:textSize="@dimen/_10ssp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="-2dp">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/yellow1"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="60%"
            android:textColor="@color/red1"
            android:textStyle="normal"
            android:textSize="@dimen/_23ssp"
            android:layout_marginHorizontal="10dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/yellow1"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textAllCaps="true"
        android:text="@string/discount_on_new_arrivals"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="@dimen/_12ssp"
        android:maxLines="2"
        android:ellipsize="end"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCouponCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-12dp"
            android:layout_toEndOf="@id/tvShowCouponCode"
            android:background="@drawable/dash_rectangle_black"
            android:paddingHorizontal="@dimen/_7sdp"
            android:paddingVertical="5dp"
            android:text="qqw"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShowCouponCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rectangle_red_solid"
            android:paddingHorizontal="12dp"
            android:paddingVertical="5dp"
            android:text="@string/show_coupon_code"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            android:textStyle="normal" />
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvExpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:textAllCaps="false"
        android:text="@string/expire_date"
        android:textColor="@color/grey2"
        android:textStyle="normal"
        android:textSize="@dimen/_10ssp"/>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <View
           android:id="@+id/viewTopSuccess"
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_alignEnd="@id/ll_success"
           android:layout_alignParentTop="true"
           android:layout_marginTop="@dimen/_11sdp"
           android:background="@color/grey3"
           android:visibility="invisible"/>

       <androidx.appcompat.widget.LinearLayoutCompat
           android:id="@+id/ll_success"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/viewTopSuccess"
           android:layout_toStartOf="@id/ivShare"
           android:background="@color/grey4"
           android:gravity="center">

           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:gravity="center">

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tvSuccessOne"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:layout_marginVertical="3dp"
                   android:gravity="center_vertical"
                   android:text="@string/_100_success"
                   android:textAllCaps="true"
                   android:textColor="@color/black"
                   android:textSize="@dimen/_9ssp"
                   android:textStyle="normal" />

               <ImageView
                   android:id="@+id/ivLike"
                   android:layout_width="@dimen/_12sdp"
                   android:layout_height="@dimen/_12sdp"
                   android:layout_marginStart="10dp"
                   android:src="@drawable/ic_like_green" />
           </androidx.appcompat.widget.LinearLayoutCompat>

           <View
               android:layout_width="1dp"
               android:layout_height="match_parent"
               android:layout_marginHorizontal="20dp"
               android:background="@color/grey1"
               android:visibility="visible" />

           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:gravity="center">

               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/tvUsedToday"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:layout_marginVertical="3dp"
                   android:gravity="center_vertical"
                   android:text="@string/_100_success"
                   android:textAllCaps="true"
                   android:textColor="@color/black"
                   android:textSize="@dimen/_9ssp"
                   android:textStyle="normal" />

               <ImageView
                   android:id="@+id/ivUsedLevel"
                   android:layout_width="@dimen/_12sdp"
                   android:layout_height="@dimen/_12sdp"
                   android:layout_marginStart="10dp"
                   android:src="@drawable/ic_used_level" />
           </androidx.appcompat.widget.LinearLayoutCompat>

       </androidx.appcompat.widget.LinearLayoutCompat>

       <View
           android:id="@+id/viewBottomSuccess"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_4sdp"
           android:layout_below="@id/ivShare"
           android:alpha="0.2"
           android:background="#ACAAAA"
           android:visibility="visible" />

       <ImageView
           android:id="@+id/ivShare"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:src="@drawable/share_red_bg_icon" />
   </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>